SlideToggle jumping fix

--- a/sass/timeline.sass
+++ b/sass/timeline.sass
@@ -41,6 +41,8 @@
       margin-bottom: $generalpadding
     .expanded-log
       display: none
+      float: left
+      width: 100%
       background: darken($lightgray, 20%)
       padding: $generalpadding $generalpadding $generalpadding $generalpadding
       //box-shadow: inset 0px 2px 1px $darkgray, inset 0px -2px 1px $darkgray
